Add sql file for sql statements
* Add docker volumes for persistent data

--- a/site_2/docker-compose.yml
+++ b/site_2/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - 1433:1433
     volumes:
-      - ~/app/mssql/data:/var/lib/mssqlql/data
+      - ./mssql-data:/var/lib/mssqlql/data
     env_file:
       - mssql.env
