--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3"
 services:
         main_site_db:
-                image: "postgres"
+                build:
+                        context: main_site_1/
+                        dockerfile: Dockerfile
                 environment:
                         POSTGRES_USER: postgres
                         POSTGRES_PASSWORD: postgres
@@ -12,7 +14,10 @@ services:
                 volumes:
                         - ./main_site_1/postgres-data:/var/lib/postgresql/data/
         site_2:
-                image: mcr.microsoft.com/mssql/server:2019-latest
+                # image: mcr.microsoft.com/mssql/server:2019-latest
+                build:
+                        context: site_2/
+                        dockerfile: Dockerfile
                 restart: always
                 ports:
                         - 8081:1433
@@ -22,7 +27,10 @@ services:
                         - site_2/mssql.env
 
         site_3:
-                image: mysql
+                # image: mysql
+                build:
+                        context: site_3/
+                        dockerfile: Dockerfile
                 restart: always
                 env_file:
                         - site_3/mysql.env
