--- a/site_2/Dockerfile
+++ b/site_2/Dockerfile
@@ -1,3 +1,4 @@
 FROM mcr.microsoft.com/mssql/server:2019-latest
 
 COPY ./setup.sql  /docker-entrypoint-initdb.d/
+COPY ./createdb.sh  /docker-entrypoint-initdb.d/
